Change tree map view to get knw-level

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -290,6 +290,7 @@ header .third-Panel .tp-Content .item  a:hover { color: #671293; }
 .q-problem-body { padding: 10px; border: 1px solid #edecd2; background-color: #ffffec; }
 .q-problem-notice { font-size: 11px; margin-top: -4px; }
 .q-problem-tick-div { float:left; margin-right: 10px; }
+.q-paragraph-source {margin-top: 2px;}
 
 .tree-map-discipline-block { float: left; margin: 7px; width: 275px; height: 145px; padding: 10px; border: 1px solid #e6e5ef; background-color: #fbfaff; text-align: center; cursor: pointer; }
 
