QTest enable to save info.

--- a/app/views/q_relation/new.html.erb
+++ b/app/views/q_relation/new.html.erb
@@ -14,9 +14,10 @@
                                                      ['Тип (Is Type)', 'is_type'],
                                                      ['Относится к (Refers To)', 'refers_to'],
                                                      ['Прикрепляет к себе (Hold On)', 'hold_on'],
-                                                     ['Имеет ответ (Has Answer)', 'has_answer'],
-                                                     ['Имеет решение (Has Solution)', 'has_solution'],
-                                                     ['Выбрал ответ (Chose Answer)', 'chose_answer']],
+                                                     ['Выбрал (Selected)', 'selected'],
+                                                     ['[old]-Имеет ответ (Has Answer)', 'has_answer'],
+                                                     ['[old]-Имеет решение (Has Solution)', 'has_solution'],
+                                                     ['[old]-Выбрал ответ (Chose Answer)', 'chose_answer']],
                                                     1), :class => "input-field") %>
     </p>
 
