--- a/app/views/q_test/index.html.erb
+++ b/app/views/q_test/index.html.erb
@@ -1,41 +1,2 @@
-<h1><%= @qtest["root"].title %></h1>
-
-<div class="q-paragraph-relation-res-line margin-top-15"></div>
-
-<div id="t-start" class="qtest-question-block"><span class="dotted-link-color">Начало тестирования</span></div>
-<% @qtest["problems_list"].each_with_index do |unit, index| %>
-    <div id="<%= unit.first[1].id %>" class="qtest-question-block">
-      <span class="dotted-link-color"><%= index+1 %></span>
-    </div>
-<% end %>
-<div id="t-end" class="qtest-question-block"><span class="dotted-link-color">Завершение тестирования</span></div>
-
-<div class="q-paragraph-relation-res-line margin-top-15 margin-bottom-17 clear-both"></div>
-<p class="res-helpers">Session ID: <%= @qtest["session_id"] %></p>
-
-<%= form_tag('solve') do -%>
-    <div id="problem-t-start">
-      Инструкиця перед началом тестирования.
-    </div>
-    <%= hidden_field_tag "session_id", @qtest["session_id"] %>
-    <%= hidden_field_tag "count_of_quests", @qtest["problems_list"].count %>
-    <% @qtest["problems_list"].each_with_index do |unit, index| %>
-        <div id="problem-<%= unit.first[1].id %>" class="display-none">
-          <h4><%=raw (index+1).to_s + '. ' + unit.first[1][:title] %></h4>
-          <div class="q-problem-body"><%=raw unit.first[1][:body] %></div>
-          <% QResource.find(unit.first[1].id).outgoing(:has_answer).depth(1).each_with_index do |asw, index| %>
-              <p>
-                <span class="res-helpers"><%= index+1 %>.&nbsp;</span>
-                <%= radio_button_tag 'answer_'+(index+1).to_s, asw.id, false %>
-                <%= label_tag asw.body %>
-              </p>
-          <% end %>
-        </div>
-    <% end %>
-    <div id="problem-t-end" class="display-none">
-      <p>
-        Инструкции перед завершением тестирования.
-      </p>
-      <p><%= submit_tag "Завершить тестирование" %></p>
-    </div>
-<% end -%>
+<h1>QTest#index</h1>
+<p>Статистика выбранному тесту ID: <%= params[:qtest_id] %></p>
