Relation property create

--- a/app/views/q_relation/new.html.erb
+++ b/app/views/q_relation/new.html.erb
@@ -11,6 +11,7 @@
       <%= select_tag('rel_type', options_for_select([['Содержит в себе (Contains)', 'contains'],
                                                      ['Состоит из (Consists Of)', 'consists_of'],
                                                      ['Необходим для изучения (Need To Learn)', 'need_to_learn'],
+                                                     ['Необходим для решения (Need To Solve)', 'need_to_solve'],
                                                      ['Тип (Is Type)', 'is_type'],
                                                      ['Относится к (Refers To)', 'refers_to'],
                                                      ['Прикрепляет к себе (Hold On)', 'hold_on'],
