--- a/app/views/q_relation/show.html.erb
+++ b/app/views/q_relation/show.html.erb
@@ -3,3 +3,4 @@
 <p>ID субъекта: <%= @relation.start_node.id %></p>
 <p>Тип связи: <%= @relation.rel_type %></p>
 <p>ID объекта: <%= @relation.end_node.id %></p>
+<p>Вес связи: <%= @relation[:weight] %></p>
