--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,7 +64,7 @@
           <%= link_to "Все ресурсы", "/q_resources" %>
         </div>
         <div class="item">
-          <a href="#">Добавить теоретический ресурс</a>
+          <%= link_to "Добавить свойство связи", "/q_relation/newprop" %>
         </div>
       </div>
     </div>
