--- a/app/views/q_test/report.html.erb
+++ b/app/views/q_test/report.html.erb
@@ -1,3 +1,5 @@
 <h1>Результаты диагностики</h1>
 <p>Find me in app/views/q_test/report.html.erb</p>
-<%= @report %>
+<p>MAX = <%= @report[:max] %></p>
+<p>T = <%= @report[:t] %></p>
+<p>F = <%= @report[:f] %></p>
