Add report params

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -316,6 +316,8 @@ footer .copyright a { color: #8279c6; }
 footer .copyright a:hover { color: #4b0b6c; }
 
 
+.chart rect { stroke: white; fill: steelblue; }
+
 /* =============================================================================
    Non-semantic helper classes
    Please define your styles before this section.
