--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -310,13 +310,14 @@ header .third-Panel .tp-Content .item  a:hover { color: #671293; }
 
 .input-field { margin: 0 0 0 0; padding: 3px 3px 3px 0; font-size: 13px; border: 1px solid #a1a1a1; }
 
+.q-test-result-box { clear: both;  }
+.q-test-result-chart { float: left; height: 250px; width: 385px; }
+.q-test-result-chart-description { float: left; width: 450px; padding: 25px 0px 0px 25px; }
+.q-test-line { clear: both; width: 100%; height: 1px; background-color: #e6e5ef; }
 
 footer .copyright { height: 25px; color: #8279c6; margin: 45px auto 0 auto; width: 940px; font-size: 10px; text-align: center; }
 footer .copyright a { color: #8279c6; }
 footer .copyright a:hover { color: #4b0b6c; }
-
-
-.chart rect { stroke: white; fill: steelblue; }
 
 /* =============================================================================
    Non-semantic helper classes
