--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>Quantum / главная страница</h1>
+<p>
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent dignissim aliquam ligula. Suspendisse potenti. Nulla lacinia mollis mattis. Vestibulum viverra, est at rhoncus molestie, ante orci vulputate arcu, sed faucibus lorem urna nec nisl. Ut a dui a enim cursus congue sed posuere dui. Integer non nulla a sem semper luctus.
+</p>
+<h3>Диагностика уровня усвоения учебного материала</h3>
+<p>1. <%= link_to "Пробный тест #21", "/q_test/show?qtest_id=21" %></p>
+<p>2. <%= link_to "Пробный тест #21", "/q_test/show?qtest_id=21" %></p>
+<p>3. <%= link_to "Пробный тест #21", "/q_test/show?qtest_id=21" %></p>
