--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -314,6 +314,10 @@ header .third-Panel .tp-Content .item  a:hover { color: #671293; }
 .q-test-result-chart { float: left; height: 250px; width: 385px; }
 .q-test-result-chart-description { float: left; width: 450px; padding: 25px 0px 0px 25px; }
 .q-test-line { clear: both; width: 100%; height: 1px; background-color: #e6e5ef; }
+.q-test-result-stat { padding-bottom: 30px; }
+.q-test-icon { margin-right: 10px; }
+.q-test-result-stat-u { float: left; }
+.q-test-result-stat .m-15 { margin-left: 15px; }
 
 footer .copyright { height: 25px; color: #8279c6; margin: 45px auto 0 auto; width: 940px; font-size: 10px; text-align: center; }
 footer .copyright a { color: #8279c6; }
