--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,3 +6,26 @@
 <p>1. <%= link_to "Пробный тест #21", "/q_test/show?qtest_id=21" %></p>
 <p>2. <%= link_to "Пробный тест #21", "/q_test/show?qtest_id=21" %></p>
 <p>3. <%= link_to "Пробный тест #21", "/q_test/show?qtest_id=21" %></p>
+
+
+<%=raw Statsample::Graph::Histogram.new(@first).to_svg %>
+<%=raw Statsample::Graph::Histogram.new(@second).to_svg %>
+<%=raw Statsample::Graph::Scatterplot.new(@first, @second).to_svg %>
+<%=raw Statsample::Graph::Boxplot.new(:vectors=>[@first, @second]).to_svg %>
+
+<p>Spearman = <%= Statsample::Bivariate.spearman(@first, @second) %></p>
+<p>First A = <%= @index[:first_a] %> | First B = <%= @index[:first_b] %></p>
+
+<strong>A:</strong>
+<% @first.each_with_index do |unit, index| %>
+<%= " " + unit.to_s %>
+<% end %>
+
+<p>&nbsp;</p>
+
+<strong>B:</strong>
+<% @second.each_with_index do |unit, index| %>
+<%= " " + unit.to_s %>
+<% end %>
+
+
