--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,6 +51,9 @@
           <%= link_to(image_tag("icons/sitemap.png", :size => "16x16", :class => "sp-icon", :align => "left", :alt => "S")+"Дерево учебного материала", "/q_map/tree?root_id=221") %>
         </div>
         <div class="item">
+          <%= link_to(image_tag("icons/table-heatmap.png", :size => "16x16", :class => "sp-icon", :align => "left", :alt => "S")+"Матрица", "/q_matrix/index") %>
+        </div>
+        <div class="item">
           <%= link_to(image_tag("icons/node-magnifier.png", :size => "16x16", :class => "sp-icon", :align => "left", :alt => "S")+"Поиск", "/") %>
         </div>
       </div>
