--- a/app/views/q_map/tree.html.erb
+++ b/app/views/q_map/tree.html.erb
@@ -13,10 +13,6 @@
 
           <% if res.outgoing(:is_type).first.title == 'Type_QParagraph' %>
               <!--<span class="res-helpers">[ph:id:<%= res.id %>] </span>-->
-              <strong><%= link_to res.title, q_paragraph_show_path() + "?id=" + res.id %></strong>
-              <span class="tree-helpers"> | </span>
-              <span class="q-tree-level-switcher">Уровень усвоения</span>
-              <span class="tree-helpers"> (≈ <%= avg %>)</span>
               <% if avg.to_f < 3.5 %>
                   <%=  image_tag("icons/star-small-empty.png", :size => "16x16", :class => "q-tree-star-icon", :align => "left", :alt => "Уровни") %>
               <% end %>
@@ -26,6 +22,11 @@
               <% if avg.to_f >= 7 %>
                   <%=  image_tag("icons/star-small.png", :size => "16x16", :class => "q-tree-star-icon", :align => "left", :alt => "Уровни") %>
               <% end %>
+              <strong><%= link_to res.title, q_paragraph_show_path() + "?id=" + res.id %></strong>
+              <span class="tree-helpers"> | </span>
+              <span class="q-tree-level-switcher">Уровень усвоения</span>
+              <span class="tree-helpers"> (≈ <%= avg %>)</span>
+
               <br /><span class="description-comment"><%= res.description %></span>
               <%=raw '<div class="tree-helpers q-paragraph-source">Источник: '+res.isource+'</div>' if res.isource && !res.isource.empty? %>
           <% end %>
@@ -39,10 +40,6 @@
 
       <% else %>
           <!--<span class="res-helpers">[id:<%= res.id %>] </span>-->
-          <strong><%= link_to res.title, q_map_tree_path() + "?root_id=" + res.id %></strong>
-          <span class="tree-helpers"> | </span>
-          <span class="q-tree-level-switcher">Уровень усвоения</span>
-          <span class="tree-helpers"> (≈ <%= avg %>)</span>
           <% if avg.to_f < 3.5 %>
               <%=  image_tag("icons/star-small-empty.png", :size => "16x16", :class => "q-tree-star-icon", :align => "left", :alt => "*") %>
           <% end %>
@@ -52,6 +49,13 @@
           <% if avg.to_f >= 7 %>
               <%=  image_tag("icons/star-small.png", :size => "16x16", :class => "q-tree-star-icon", :align => "left", :alt => "*") %>
           <% end %>
+
+          <span class="res-helpers">[id:<%= res.id %>][note:<%= res.note %>] </span>
+          <strong><%= link_to res.title, q_map_tree_path() + "?root_id=" + res.id %></strong>
+          <span class="tree-helpers"> | </span>
+          <span class="q-tree-level-switcher">Уровень усвоения</span>
+          <span class="tree-helpers"> (≈ <%= avg %>)</span>
+
           <br /><span class="description-comment"><%= res.description %></span>
       <% end %>
 
