--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -305,6 +305,13 @@ header .third-Panel .tp-Content .item  a:hover { color: #671293; }
 
 .qtest-question-block { float: left; margin: 7px; min-width: 20px; height: 17px; padding: 3px 4px 2px 4px; border: 1px solid #e6e5ef; background-color: #fbfaff; text-align: center; cursor: pointer; font-size: 12px; }
 
+
+.qmatrix-unit-cell-none{ float: left; margin: 1px; width: 18px; height: 18px; }
+.qmatrix-unit-cell-default{ float: left; margin: 1px; width: 16px; height: 16px; border: 1px solid #e1e1e1; background-color: #f3f3f3; font-size: 10px; text-align: center; }
+.qmatrix-unit-cell-number{ float: left; margin: 1px; width: 18px; height: 18px; text-align: center; font-size: 11px; color: gray; }
+.qmatrix-unit-cell-frequency{ float: left; margin: 1px; width: 16px; height: 16px; border: 1px solid #e6e5ef; background-color: #fbfaff; }
+
+
 .clear-both { clear: both; }
 .display-none { display: none; }
 
