--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
 <!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
@@ -48,7 +48,7 @@
           <%= link_to(image_tag("icons/node-design.png", :size => "16x16", :class => "sp-icon", :align => "left", :alt => "+")+"Добавить связь", "/q_relation/new") %>
         </div>
         <div class="item">
-          <%= link_to(image_tag("icons/sitemap.png", :size => "16x16", :class => "sp-icon", :align => "left", :alt => "S")+"Дерево учебного материала", "/q_map/tree?root_id=221") %>
+          <%= link_to(image_tag("icons/sitemap.png", :size => "16x16", :class => "sp-icon", :align => "left", :alt => "S")+"Дерево учебного материала", "/q_map/tree?root_id=59") %>
         </div>
         <div class="item">
           <%= link_to(image_tag("icons/table-heatmap.png", :size => "16x16", :class => "sp-icon", :align => "left", :alt => "S")+"Матрица", "/q_matrix/index") %>
